List of user-visible changes of Public Domain Ratfor.

New in 1.0i
-----------
 
 * Ratfor is now fully case-sensible, both respect to its input and to its
   output.  In particular, this means that output is no more converted to
   lowercase (this conversion was tricky, since e.g. strings and comments
   had to be left unchanged, and was cause of some bugs and dark corner
   cases).  This new behaviour shouldn't cause problems, as modern fortran
   compilers, although case-insensible, are smart enough not to barf on
   mixed-case input.
 * The line numbers in error messages should now be always correct, even
   when inclusion of files or expansion of macros are involved. Alas, this
   was not the case before.
 * An input line starting with `%' is always passed *truly* verbatim to
   output, without line wrapping (if the user wants to output raw fortran
   code, we expect him to know what he's doing, so we must be as
   unobtrusive as possible).  Previously, even the `%'-quoted lines were
   subjected to line wrapping, so that they did not exceed the maximum
   line lenght allowed in valid fortran code.
 * Now an underscore character `_' at the end of a line do continuation
   *only* for the next newline character, while previously it did line
   continuation up to the first non-empty line found.
   For example, with the new behaviour, the input:
     foo_

     bar
   has an output similar to:
     foo
     bar
   while with the old behaviour it had an output similar to:
     foobar
 * Tabs in input are always converted to single spaces in output, even in
   generated fortran comments.
 * If GNU make is called on the unconfigured ratfor tree, it automatically
   runs autoreconf and ./configure before trying to build the given
   targets.
 * Testuite coverage increased, with many new test scripts added.
 * Added the customary installation instruction (in file `INSTALL').

New in 1.0h
-----------

 * Extended make rules useful to maintainers, in particular with the