@@ -1,0 +1,18 @@
+#!/bin/sh
+
+# Basic checks on the `-o' option of ratfor.
+
+. ./defs.sh || exit 99
+
+echo 'junk123' > tst.r
+
+run_RATFOR -e 0 -- -o tst.f tst.r || testcase_FAIL
+test -f tst.f || testcase_FAIL
+cat tst.f
+test -s stdout && testcase_FAIL
+test -s stderr && testcase_FAIL
+$GREP 'junk123' tst.f || testcase_FAIL
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
